--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true
   },
-  "include": ["src"],
+  "include": ["src", "global.d.ts"],
   "exclude": ["node_modules", "**/__tests__/*"]
 }
